--- a/templates/article2.html
+++ b/templates/article2.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="jp">
+{% extends "base.html"%} {% block content %}
+<h1>Flask Blog</h1>
+<h2>記事2</h2>
 
-<head>
-    <meta charset="UTF-8" />
-    <title>Flaskblog</title>
-</head>
-
-<body>
-    <h1>Flask Blog</h1>
-    <h2>記事2</h2>
-
-    <a href="{{url_for('index')}}">ホームへ</a>
-</body>
-
-</html>
+<a href="{{url_for('index')}}">ホームへ</a> {% endblock %}
