--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
 <article>
     <h2>ホーム画面</h2>
     <p>こちらはホーム画面です。</p>
-    {% for post in posts %} {#取得した内容を１つずつ表示#}
+    {% for post in posts %}
     <h2>{{post.title}}</h2>
     <p>- 作成日時：{{post.created_at}}</p>
     <p>- {{post.body}}</p>
-    {% endfor %}
+    <a href="/{{post.id}}/update" role="button">編集</a> {% endfor %}
 </article>
 <a href="{{url_for('article1')}}">記事1へ</a>
 <a href="{{url_for('article2')}}">記事2へ</a> {% endblock %}
