--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,14 @@
     <p>こちらはホーム画面です。</p>
     {% for post in posts %}
     <h2>{{post.title}}</h2>
-    <p>- 作成日時：{{post.created_at}}</p>
-    <p>- {{post.body}}</p>
-    <a href="/{{post.id}}/update" role="button">編集</a> {% endfor %}
+    <ul>
+        <li>作成日時：{{post.created_at}}</li>
+    </ul>
+    <ul>
+        <li>{{post.body}}</li>
+    </ul>
+    <a href="/{{post.id}}/update" role="button">編集</a>
+    <a href="/{{post.id}}/delete" role="button">削除</a> {% endfor %}
 </article>
 <a href="{{url_for('article1')}}">記事1へ</a>
 <a href="{{url_for('article2')}}">記事2へ</a> {% endblock %}
